@@ -1,13 +1,15 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Blueprint CSS - Sample</title>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+  
+	<head>
+		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+		<title>Blueprint CSS - Layout Sample</title>
     
     <!-- Framework CSS -->
-    <link rel="stylesheet" href="../screen.css" type="text/css" media="screen, projection">
-    <link rel="stylesheet" href="../print.css" type="text/css" media="print">
+    <link rel="stylesheet" href="../screen.css" type="text/css" media="screen, projection" />
+    <link rel="stylesheet" href="../print.css" type="text/css" media="print" />
     
     <!--[if lt IE 7]>
     <link rel="stylesheet" href="../ie.css" type="text/css" media="screen, projection">
@@ -27,7 +29,7 @@
       
       <h2>Blueprint CSS Demo <span class="alt">and</span> Examples <span class="alt">of</span> Use</h2>
       
-      <hr>
+      <hr />
       
       <div class="column span-15 prepend-1">
         
@@ -35,7 +37,7 @@
         
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nunc congue ipsum vestibulum libero. Aenean vitae justo. Nam eget tellus. Etiam convallis, est eu lobortis mattis, lectus tellus tempus felis, a ultricies erat ipsum at metus. </p>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi et risus. Aliquam nisl. Nulla facilisi. Cras accumsan vestibulum ante. Vestibulum sed tortor. Praesent tempus fringilla elit. Ut elit diam, sagittis in, nonummy in, gravida non, nunc. Ut orci. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Nam egestas, orci eu imperdiet malesuada, nisl purus fringilla odio, quis commodo est orci vitae justo. Aliquam placerat odio tincidunt nulla. Cras in libero. Aenean rutrum, magna non tristique posuere, erat odio eleifend nisl, non convallis est tortor blandit ligula. Nulla id augue.</p>
-        <p><img src="test.jpg" class="top pull-1" alt="test">Nullam mattis, odio ut tempus facilisis, metus nisl facilisis metus, auctor consectetuer felis ligula nec mauris. Vestibulum odio erat, fermentum at, commodo vitae, ultrices et, urna.  Mauris vulputate, mi pulvinar sagittis condimentum, sem nulla aliquam velit, sed imperdiet mi purus eu magna. Nulla varius metus ut eros. Aenean aliquet magna eget orci. Class aptent taciti sociosqu ad litora.</p>
+        <p><img src="test.jpg" class="top pull-1" alt="test" />Nullam mattis, odio ut tempus facilisis, metus nisl facilisis metus, auctor consectetuer felis ligula nec mauris. Vestibulum odio erat, fermentum at, commodo vitae, ultrices et, urna.  Mauris vulputate, mi pulvinar sagittis condimentum, sem nulla aliquam velit, sed imperdiet mi purus eu magna. Nulla varius metus ut eros. Aenean aliquet magna eget orci. Class aptent taciti sociosqu ad litora.</p>
         <p>Vivamus euismod. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse vel nibh ut turpis dictum sagittis. Aliquam vel velit a elit auctor sollicitudin. Nam vel dui vel neque lacinia pretium. Quisque nunc erat, venenatis id, volutpat ut, scelerisque sed, diam. Mauris ante. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec mattis. Morbi dignissim sollicitudin libero. Nulla lorem.</p>
         
         <blockquote><p>Integer cursus ornare mauris. Praesent nisl arcu, imperdiet eu, ornare id, scelerisque ut, nunc. Praesent sagittis erat sed velit tempus imperdiet. Ut tristique, ante in interdum hendrerit, erat enim faucibus felis, quis rutrum mauris lorem quis sem. Vestibulum ligula nisi, mattis nec, posuere et, blandit eu, ligula. Nam suscipit placerat odio. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Pellentesque tortor libero, venenatis vitae, rhoncus eu, placerat ut, mi. Nulla nulla.</p></blockquote>
@@ -60,7 +62,7 @@
         
       </div>
       
-      <hr>
+      <hr />
       
       <div class="column span-24">
         
@@ -75,13 +77,13 @@
         <div class="column span-12 last">
           
           <h4>Whatever</h4>
-          <p>Maecenas vel metus quis magna pharetra fermentum. Integer sit amet tortor. Maecenas porttitor, pede sed gravida auctor, nulla augue<img src="test.jpg" alt="test"> aliquet elit, at pretium urna orci ut metus. Aliquam in dolor. Phasellus congue neque a lorem. Duis ultrices.</p>
+          <p>Maecenas vel metus quis magna pharetra fermentum. Integer sit amet tortor. Maecenas porttitor, pede sed gravida auctor, nulla augue<img src="test.jpg" alt="test" /> aliquet elit, at pretium urna orci ut metus. Aliquam in dolor. Phasellus congue neque a lorem. Duis ultrices.</p>
           <p>Duis ultrices. Morbi consequat pretium velit. Quisque velit tellus, varius vel, tempus sit amet, fermentum id, elit. Duis ipsum justo, facilisis ac, dignissim ut, ullamcorper sed, sem. Nunc tellus sem, tincidunt ac, porta eu, faucibus at, mi. Integer at diam. Donec a elit in justo euismod iaculis. Duis mattis. Duis ultrices.</p>
         </div>
         
       </div>
       
-      <hr>
+      <hr />
       
       <div class="column span-14 small quiet">
         <p>Footer</p>
