@@ -1,13 +1,15 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+  
+	<head>
+		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <title>Blueprint CSS - Typography</title>
     
     <!-- Framework CSS -->
-    <link rel="stylesheet" href="../screen.css" type="text/css" media="screen, projection">
-    <link rel="stylesheet" href="../print.css" type="text/css" media="print">
+    <link rel="stylesheet" href="../screen.css" type="text/css" media="screen, projection" />
+    <link rel="stylesheet" href="../print.css" type="text/css" media="print" />
     
     <!-- Show the grid and baseline -->
     <style type="text/css">
@@ -23,7 +25,7 @@
       
       <h1>Blueprint CSS Typography Testing</h1>
       
-      <hr>
+      <hr />
       
       <div class="column span-8">
         <p>Lorem ipsum dolor <span class="caps">NATO</span> sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -43,7 +45,7 @@
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         
-        <hr>
+        <hr />
         
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         
@@ -65,17 +67,17 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         
         <h1>Lorem Ipsum 1</h1>
-        <hr>
+        <hr />
         <h2>Lorem Ipsum 2</h2>
-        <hr>
+        <hr />
         <h3>Lorem Ipsum 3</h3>
-        <hr>
+        <hr />
         <h4>Lorem Ipsum 4</h4>
-        <hr>
+        <hr />
         <h5>Lorem Ipsum 5</h5>
-        <hr>
+        <hr />
         <h6>Lorem Ipsum 6</h6>
-        <hr>
+        <hr />
         
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         
@@ -122,11 +124,11 @@
         
         <p class="large">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         
-        <hr>
+        <hr />
         
       </div>
       
-      <hr>
+      <hr />
       
       <p class="small">End test</p>
       
